--- a/Day 16-100/Where are the rest of the days/task-info.yaml
+++ b/Day 16-100/Where are the rest of the days/task-info.yaml
@@ -6,6 +6,12 @@ files:
   - name: __init__.py
     visible: false
     learner_created: false
+  - name: Day 16/main.py
+    visible: true
+    learner_created: true
+  - name: Day 16/another_module.py
+    visible: true
+    learner_created: true
 status: Solved
 record: -1
 post_submission_on_open: true
