day 16 imported pretty table

--- a/Day 16-100/Where are the rest of the days/task-info.yaml
+++ b/Day 16-100/Where are the rest of the days/task-info.yaml
@@ -12,6 +12,9 @@ files:
   - name: Day 16/another_module.py
     visible: true
     learner_created: true
+  - name: Day 16/packages.py
+    visible: true
+    learner_created: true
 status: Solved
 record: -1
 post_submission_on_open: true
