--- a/Day 16-100/Where are the rest of the days/task-info.yaml
+++ b/Day 16-100/Where are the rest of the days/task-info.yaml
@@ -15,6 +15,9 @@ files:
   - name: Day 16/packages.py
     visible: true
     learner_created: true
+  - name: Day 17/main.py
+    visible: true
+    learner_created: true
 status: Solved
 record: -1
 post_submission_on_open: true
