--- a/Day 16-100/Where are the rest of the days/task-info.yaml
+++ b/Day 16-100/Where are the rest of the days/task-info.yaml
@@ -30,6 +30,9 @@ files:
   - name: Day 17/quizz game/quizz_brain.py
     visible: true
     learner_created: true
+  - name: Day 18/mian.py
+    visible: true
+    learner_created: true
 status: Solved
 record: -1
 post_submission_on_open: true
