--- a/Day 16-100/Where are the rest of the days/task-info.yaml
+++ b/Day 16-100/Where are the rest of the days/task-info.yaml
@@ -39,6 +39,9 @@ files:
   - name: Day 18/random_walk.py
     visible: true
     learner_created: true
+  - name: Day 18/spirograph.py
+    visible: true
+    learner_created: true
 status: Solved
 record: -1
 post_submission_on_open: true
