--- a/Day 16-100/Where are the rest of the days/task-info.yaml
+++ b/Day 16-100/Where are the rest of the days/task-info.yaml
@@ -49,6 +49,9 @@ files:
     visible: true
     is_binary: true
     learner_created: true
+  - name: Day 19/main.py
+    visible: true
+    learner_created: true
 status: Solved
 record: -1
 post_submission_on_open: true
