--- a/Day 16-100/Where are the rest of the days/task-info.yaml
+++ b/Day 16-100/Where are the rest of the days/task-info.yaml
@@ -52,6 +52,9 @@ files:
   - name: Day 19/main.py
     visible: true
     learner_created: true
+  - name: Day 19/racing.py
+    visible: true
+    learner_created: true
 status: Solved
 record: -1
 post_submission_on_open: true
